Java 17 transition